# codex

codex-rs/: Cargo.toml
codex-rs/analytics/src/: analytics_client_tests.rs  client.rs  events.rs  facts.rs  lib.rs  reducer.rs
codex-rs/app-server-client/src/: lib.rs
codex-rs/app-server/src/: codex_message_processor.rs  config_api.rs  in_process.rs  lib.rs  message_processor.rs  thread_state.rs
codex-rs/app-server/src/message_processor/: tracing_tests.rs
codex-rs/apply-patch/src/: lib.rs  parser.rs
codex-rs/cli/: Cargo.toml
codex-rs/cli/src/: debug_sandbox.rs
codex-rs/config/src/: config_toml.rs  tui_keymap.rs
codex-rs/core/: config.schema.json
codex-rs/core/src/: thread_manager.rs  turn_metadata_tests.rs
codex-rs/core/tests/: responses_headers.rs
codex-rs/exec/src/: lib.rs
codex-rs/features/src/: lib.rs
codex-rs/git-utils/src/: info.rs  lib.rs
codex-rs/lemonade/: BUILD.bazel  Cargo.toml
codex-rs/lemonade/src/: client.rs  lib.rs
codex-rs/linux-sandbox/src/: bwrap.rs  linux_run_main.rs  linux_run_main_tests.rs
codex-rs/model-provider-info/src/: lib.rs  model_provider_info_tests.rs
codex-rs/model-provider/src/: auth.rs  lib.rs
codex-rs/models-manager/: models.json
codex-rs/protocol/src/: permissions.rs  protocol.rs
codex-rs/sandboxing/src/: seatbelt_tests.rs
codex-rs/thread-store/src/: in_memory.rs  lib.rs  test_registry.rs
codex-rs/tui/src/: app.rs  app_event.rs  app_server_session.rs  chatwidget.rs  key_hint.rs  keymap.rs  keymap_setup.rs  lib.rs  oss_selection.rs  slash_command.rs
codex-rs/utils/oss/: Cargo.toml
(+50 files in other folders)
