[package]
name = "codex-lemonade"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "codex_lemonade"
path = "src/lib.rs"

[dependencies]
codex-core = { workspace = true }
codex-model-provider-info = { workspace = true }
reqwest = { workspace = true, features = ["json", "stream"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["rt", "time"] }
tracing = { workspace = true, features = ["log"] }
which = "8.0"

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
wiremock = { workspace = true }

[lints]
workspace = true
